--- a/admin/view/template/extension/module/d_seo_module/install.twig
+++ b/admin/view/template/extension/module/d_seo_module/install.twig
@@ -28,7 +28,7 @@
 			<div class="panel-heading">
 				<h3 class="panel-title">{{ text_install }}</h3>
 			</div>
-			<div class="panel-body panel-setup" style="background-image: url({{ catalog }}image/catalog/{{ codename }}/background.svg)">
+			<div class="panel-body panel-setup" style="background-image: url(view/image/{{ codename }}/background.svg)">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center">
 						<div class="setup-info">
@@ -53,7 +53,7 @@
 							{% for feature in features %}
 							<div class="feature info-window-item" data-href="{{ feature['href'] }}">
 								<div class="feature-wrap">
-									<img src="{{ catalog }}image/{{ feature['image'] }}" class="image" />
+									<img src="view/image/{{ feature['image'] }}" class="image" />
 									<p class="name">{{ feature['name'] }}</p>
 								</div>
 							</div>
@@ -62,7 +62,7 @@
 						</div>
 					</div>
 				</div>
-				<img src="{{ catalog }}image/catalog/{{ codename }}/planet.svg" class="planet" />
+				<img src="view/image/{{ codename }}/planet.svg" class="planet" />
 			</div>
 		</div>
 		<div class="info-window">
