--- a/admin/view/template/extension/module/d_seo_module/dashboard.twig
+++ b/admin/view/template/extension/module/d_seo_module/dashboard.twig
@@ -71,7 +71,7 @@
 					<div class="col-md-12 m-b-xl">
 						{% if control_extensions %}
 						<div class="page-header">
-							<h3>{{ text_seo_extensions }} <span class="info-window-item" data-href="https://opencartseomodule.com/seo-module-dashboard"><i class="fa fa-question"></i></span></h3>
+							<h3><strong>{{ text_seo_extensions }}</strong> <span class="info-window-item" data-href="https://opencartseomodule.com/seo-module-dashboard"><i class="fa fa-question"></i></span></h3>
 						</div>
 						<div class="control-extensions">
 							{% for control_extension in control_extensions %}
