--- a/admin/view/template/extension/module/d_seo_module/instruction.twig
+++ b/admin/view/template/extension/module/d_seo_module/instruction.twig
@@ -50,7 +50,7 @@
 					</li>
 				</ul>
 				
-				<div class="instruction"></div>
+				<div class="instruction p-sm"></div>
 				<div class="p-lg text-center">{{ text_powered_by }}</div>
 			</div>
 		</div>
