--- a/admin/view/template/extension/module/d_seo_module/setting.twig
+++ b/admin/view/template/extension/module/d_seo_module/setting.twig
@@ -82,7 +82,7 @@
 							<div class="tab-content">
 								<div id="vtab_basic_setting" class="tab-pane active">
 									<div class="page-header">
-										<h3>{{ text_basic_settings }}</h3>
+										<h3><strong>{{ text_basic_settings }}</strong></h3>
 									</div>
 									<div class="form-group">
 										<label class="col-sm-3 control-label" for="input-status">{{ entry_status }}</label>
@@ -106,7 +106,7 @@
 								</div>
 								<div id="vtab_htaccess" class="tab-pane">
 									<div class="page-header">
-										<h3>{{ text_htaccess }} <span class="info-window-item" data-href="https://opencartseomodule.com/opencart-htaccess-editor"><i class="fa fa-question"></i></span></h3>
+										<h3><strong>{{ text_htaccess }}</strong> <span class="info-window-item" data-href="https://opencartseomodule.com/opencart-htaccess-editor"><i class="fa fa-question"></i></span></h3>
 									</div>
 									<div class="form-group">
 										<label class="col-sm-3 control-label" for="input-status">{{ entry_status }}</label>
@@ -131,7 +131,7 @@
 								</div>
 								<div id="vtab_robots" class="tab-pane">
 									<div class="page-header">
-										<h3>{{ text_robots }} <span class="info-window-item" data-href="https://opencartseomodule.com/robots-txt-editor"><i class="fa fa-question"></i></span></h3>
+										<h3><strong>{{ text_robots }}</strong> <span class="info-window-item" data-href="https://opencartseomodule.com/robots-txt-editor"><i class="fa fa-question"></i></span></h3>
 									</div>
 									<div class="form-group">
 										<label class="col-sm-3 control-label" for="input-status">{{ entry_status }}</label>
