--- a/admin/view/template/extension/module/d_seo_module/target_keyword.twig
+++ b/admin/view/template/extension/module/d_seo_module/target_keyword.twig
@@ -67,7 +67,7 @@
 				</ul>
 				
 				<div class="page-header">
-					<h3>{{ text_target_keywords }} <span class="info-window-item" data-href="https://opencartseomodule.com/target-keyword-planner"><i class="fa fa-question"></i></span></h3>
+					<h3><strong>{{ text_target_keywords }}</strong> <span class="info-window-item" data-href="https://opencartseomodule.com/target-keyword-planner"><i class="fa fa-question"></i></span></h3>
 				</div>
 							
 				<ul class="nav nav-pills">
