--- a/admin/view/template/extension/module/d_seo_module/dashboard.twig
+++ b/admin/view/template/extension/module/d_seo_module/dashboard.twig
@@ -26,14 +26,10 @@
 	</div>
 	<div class="container-fluid">
 		{% if error['warning'] %}
-		<div class="alert alert-danger"><i class="fa fa-exclamation-circle"></i> {{ error['warning'] }}
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
-		</div>
+		<div class="alert alert-danger"><i class="fa fa-exclamation-circle"></i><button type="button" class="close" data-dismiss="alert">&times;</button> {{ error['warning'] }}</div>
 		{% endif %}
 		{% if success %}
-		<div class="alert alert-success"><i class="fa fa-exclamation-circle"></i> {{ success }}
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
-		</div>
+		<div class="alert alert-success"><i class="fa fa-exclamation-circle"></i><button type="button" class="close" data-dismiss="alert">&times;</button> {{ success }}</div>
 		{% endif %}
 		<div class="shopunity-widget-update"></div>
 		{% if d_seo_module_pack %}
@@ -67,7 +63,7 @@
 					</li>
 				</ul>
 				
-				<form action="{{ action }}" method="post" enctype="multipart/form-data" id="form" class="form-horizontal">
+				<form action="{{ action }}" method="post" enctype="multipart/form-data" id="form">
 					<div class="col-md-12 m-b-xl">
 						{% if control_extensions %}
 						<div class="page-header">
@@ -269,7 +265,7 @@ function showAlert(json) {
 						
 	if (json['error']) {
 		if (json['error']['warning']) {
-			$('#content > .container-fluid').first().prepend('<div class="alert alert-danger"><i class="fa fa-exclamation-circle"></i> ' + json['error']['warning'] + ' <button type="button" class="close" data-dismiss="alert">&times;</button></div>');
+			$('#content > .container-fluid').first().prepend('<div class="alert alert-danger"><i class="fa fa-exclamation-circle"></i><button type="button" class="close" data-dismiss="alert">&times;</button> ' + json['error']['warning'] + '</div>');
 		}				
 				
 		for (i in json['error']) {
@@ -286,7 +282,7 @@ function showAlert(json) {
 	}
 			
 	if (json['success']) {
-		$('#content > .container-fluid').first().prepend('<div class="alert alert-success"><i class="fa fa-check-circle"></i> ' + json['success'] + '  <button type="button" class="close" data-dismiss="alert">&times;</button></div>');
+		$('#content > .container-fluid').first().prepend('<div class="alert alert-success"><i class="fa fa-check-circle"></i><button type="button" class="close" data-dismiss="alert">&times;</button> ' + json['success'] + '</div>');
 	}
 }
 
