--- a/admin/view/template/extension/module/d_seo_module/setting.twig
+++ b/admin/view/template/extension/module/d_seo_module/setting.twig
@@ -14,8 +14,8 @@
 				{% endfor %}
 				</select>
 				{% endif %}
-				<button id="save_and_stay" data-toggle="tooltip" title="{{ button_save_and_stay }}" class="btn btn-success"><i class="fa fa-save"></i></button>
-				<button id="save_and_exit" data-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa fa-save"></i></button>
+				<button id="button_save_and_stay" data-toggle="tooltip" title="{{ button_save_and_stay }}" class="btn btn-success"><i class="fa fa-save"></i><i class="fa fa-refresh rotate hide"></i></button>
+				<button id="button_save_and_exit" data-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa fa-save"></i><i class="fa fa-refresh rotate hide"></i></button>
 				<a href="{{ cancel }}" data-toggle="tooltip" title="{{ button_cancel }}" class="btn btn-default"><i class="fa fa-reply"></i></a>
 			</div>
 			<h1>{{ heading_title }} {{ version }}</h1>
@@ -96,7 +96,7 @@
 									<div class="form-group">
 										<label class="col-sm-3 control-label" for="input-uninstall">{{ entry_uninstall }}</label>
 										<div class="col-sm-9">
-											<a action="{{ uninstall }}" id="button_uninstall" class="btn btn-danger">{{ button_uninstall }}</a>
+											<a action="{{ uninstall }}" id="button_uninstall" class="btn btn-danger"><i class="fa fa-trash"></i><i class="fa fa-refresh rotate hide"></i> {{ button_uninstall }}</a>
 										</div>
 									</div>	
 								</div>
@@ -244,10 +244,12 @@ $('body').on('click', '#button_uninstall', function(event) {
 			data: '',
 			dataType: 'json',
 			beforeSend: function() {
-				$('#content').fadeTo('slow', 0.5);
+				$('#button_uninstall .fa-refresh').removeClass('hide');
+				$('#button_uninstall .fa-trash').addClass('hide');
 			},
 			complete: function() {
-				$('#content').fadeTo('slow', 1);   
+				$('#button_uninstall .fa-refresh').addClass('hide');
+				$('#button_uninstall .fa-trash').removeClass('hide');
 			},
 			success: function(json) {
 				showAlert(json);
@@ -263,17 +265,19 @@ $('body').on('click', '#button_uninstall', function(event) {
 	}
 });
 
-$('body').on('click', '#save_and_stay', function() {
+$('body').on('click', '#button_save_and_stay', function() {
     $.ajax({
 		type: 'post',
 		url: $('#form').attr('action'),
 		data: $('#form').serialize(),
 		dataType: 'json',
 		beforeSend: function() {
-			$('#content').fadeTo('slow', 0.5);
+			$('#button_save_and_stay .fa-refresh').removeClass('hide');
+			$('#button_save_and_stay .fa-save').addClass('hide');
 		},
 		complete: function() {
-			$('#content').fadeTo('slow', 1);   
+			$('#button_save_and_stay .fa-refresh').addClass('hide');
+			$('#button_save_and_stay .fa-save').removeClass('hide');
 		},
 		success: function(json) {
 			showAlert(json);
@@ -284,17 +288,19 @@ $('body').on('click', '#save_and_stay', function() {
     });  
 });
 	
-$('body').on('click', '#save_and_exit', function() {
+$('body').on('click', '#button_save_and_exit', function() {
     $.ajax({
 		type: 'post',
 		url: $('#form').attr('action'),
 		data: $('#form').serialize(),
 		dataType: 'json',
 		beforeSend: function() {
-			$('#content').fadeTo('slow', 0.5);
+			$('#button_save_and_exit .fa-refresh').removeClass('hide');
+			$('#button_save_and_exit .fa-save').addClass('hide');
 		},
 		complete: function() {
-			$('#content').fadeTo('slow', 1);   
+			$('#button_save_and_exit .fa-refresh').addClass('hide');
+			$('#button_save_and_exit .fa-save').removeClass('hide');
 		},
 		success: function(json) {
 			showAlert(json);
